syntax = "proto3";

package wal_pb;

option go_package = "github.com/frfahim/wal/proto/wal_pb";

message WAL_DATA {
  uint64 logSeqNo = 1;
  bytes data = 2;
  uint32 checksum = 3;
}
